--- a/content/posts/2019-12-10--webpack.md
+++ b/content/posts/2019-12-10--webpack.md
@@ -184,9 +184,8 @@ import Utility from 'Utilities/utility'; // 편해졌다.
 
 ## 도움받은 문서
 
-책: [웹팩 핸드북](https://joshua1988.github.io/webpack-guide/concepts/plugin.html#plugin)
+책: [웹팩 핸드북](https://joshua1988.github.io/webpack-guide/concepts/plugin.html#plugin)</br>
 공식사이트: [웹팩](https://webpack.js.org/)
-___
 
 > 공부한 내용을 정리하는 공간으로 학습 중 습득한 내용이 정확하지 않은 정보를 포함할 수 있어 추후 발견시 수정하도록 하겠습니다.
 
