new post: - algorithm-3 - nextjs TIL (getInitialProps and etc.)

--- a/content/posts/2019-11-17--algorithm-1.md
+++ b/content/posts/2019-11-17--algorithm-1.md
@@ -3,8 +3,8 @@ title: "이차원 배열 알고리즘"
 date: '2019-11-17T12:23:22.000Z'
 template: "post"
 draft: false
-slug: 'algorithm-two-dimensional-array-1'
-category: 'THE OTHERS'
+slug: 'algorithm-1'
+category: 'ALGORITHM'
 tags:
   - 'Algorithm'
   - 'Two Dimensionalal Array'
@@ -63,6 +63,8 @@ const diagonalPrint = m => {
 그리고 추가 반복문인 J를 대각선의 요소가 가장 많았다가 점점 작아질 경우 어떻게 처리할 것인지에 대해 많이 고민했지만, i와 j로 가능한 모든 좌표를 찍을 수 있다고 가정했을 때 좌표의 x, y가 총 배열과 2차 배열의 총 길이보다 크면 안된다는 규칙을 발견해서 이를 적용 시켰다.  
 
 나에겐 굉장히 어려운 문제였지만, 어떤 면에서는 굉장히 쉽게 풀 수 있는 문제라고 생각하고 무엇보다
+
+
 > 수학은 익숙해지는 것이다 - 폰노이만
 
 
