--- a/content/posts/2019-11-19--algorithm-2.md
+++ b/content/posts/2019-11-19--algorithm-2.md
@@ -3,8 +3,8 @@ title: "3개 숫자의 합이 소수인가?!"
 date: '2019-11-19T19:23:48.000Z'
 template: "post"
 draft: false
-slug: 'prime-number-of-sum-of-three-numbers'
-category: 'THE OTHERS'
+slug: 'algorithm-2'
+category: 'ALGORITHM'
 tags:
   - 'Programmers'
   - 'Algorithm'
