--- a/content/posts/2020-05-23--Recoil-1.md
+++ b/content/posts/2020-05-23--Recoil-1.md
@@ -123,7 +123,7 @@ function FontButton() {
 ```
 `Selectors`는 `useRecoilValue`를 사용해 각 컴포넌트에서 참조할 수 있고 `Selectors`뿐만 아니라 `Atoms` 값을 참조할 때도 사용할 수 있는데, API 문서에서는 단순히 값을 읽어오는 경우에만 사용하는 것을 권장했다.
 
-## 내가 생객해본 Recoil
+## Recoil에 대한 나의 생각
 아직 많은 기능이 내포되지 않은 이유도 있겠지만, Recoil은 대체로 굉장히 심플하고 간단해 러닝커브가 작을 것이라는 느낌을 강하게 받았다. 리덕스의 경우에는 dispatch와 action, reducer 등이 어떻게 상호 동작하는지 등을 처음에 이해하는게 굉장히 어려웠지만, recoil은 개념과 API가 적어 이해하는데 상대적으로 쉬운 느낌을 받았다. 또한, 따로 Store를 정의하거나 다수의 Store들을 합치고 이를 Provider의 props로 전달하는 등 복잡한 작업이 생략되어 더욱 러닝커브가 작고 쓰기 편하다는 느낌을 받았다. 그리고 무엇보다 `Selectors`를 활용해 State를 최소화하고 단순히 다른 State와의 결합, 계산의 결과물로 선언해 뒀었던 State를 함수로 직접 사용할 수 있는 점이 기존의 상태관리 라이브러리들과 다른점이자 효율적인 측면이 될 수 있다고 생각했다. 어떤 면에서는 MobX 느낌도 얻을 수 있었다. 
 
 이제 막 수면위로 올라왔기에 더욱 지켜봐야하겠지만, 기존의 상태관리 라이브러리들을 업그레이드한 느낌의 새로운 라이브러리이기에 충분히 주목받을만 하다고 생각했다. 충분히 시간을 갖고 사용해보며 다음 프로젝트에 적용해볼 생각이다.
